# flatn

./: .gitignore  MANIFEST.in  Makefile  README.md  build.sh  fplll-windows.patch  pyproject.toml  setup.py  test.sh  tests.py
.github/workflows/: build.yaml  linux.yaml  macos.yaml
flad/: __init__.py  _flat.py
flatn/: __init__.py  _flat.py
pyflatter/: __init__.py
